--- a/Mp3App/Features/Search/Result/All/AllResultViewController.storyboard
+++ b/Mp3App/Features/Search/Result/All/AllResultViewController.storyboard
@@ -16,18 +16,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="70t-E7-d4a">
-                                <rect key="frame" x="10" y="54" width="394" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Jt3-k4-Jo9">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="70t-E7-d4a" firstAttribute="top" secondItem="b99-ZF-MKC" secondAttribute="top" constant="10" id="0ei-g5-32y"/>
-                            <constraint firstItem="70t-E7-d4a" firstAttribute="leading" secondItem="b99-ZF-MKC" secondAttribute="leading" constant="10" id="7dY-mI-VAz"/>
-                            <constraint firstItem="b99-ZF-MKC" firstAttribute="trailing" secondItem="70t-E7-d4a" secondAttribute="trailing" constant="10" id="TT8-8d-2Fg"/>
+                            <constraint firstItem="b99-ZF-MKC" firstAttribute="bottom" secondItem="Jt3-k4-Jo9" secondAttribute="bottom" id="75J-YZ-Xgs"/>
+                            <constraint firstItem="b99-ZF-MKC" firstAttribute="trailing" secondItem="Jt3-k4-Jo9" secondAttribute="trailing" id="88c-mT-AHv"/>
+                            <constraint firstItem="Jt3-k4-Jo9" firstAttribute="top" secondItem="b99-ZF-MKC" secondAttribute="top" id="WYm-fn-LJP"/>
+                            <constraint firstItem="Jt3-k4-Jo9" firstAttribute="leading" secondItem="b99-ZF-MKC" secondAttribute="leading" id="bcL-nY-YcR"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="b99-ZF-MKC"/>
                     </view>
