--- a/Mp3App/Features/Search/Result/Playlist/PlaylistResultViewController.storyboard
+++ b/Mp3App/Features/Search/Result/Playlist/PlaylistResultViewController.storyboard
@@ -16,17 +16,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Playlist" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dB8-gu-tgo">
-                                <rect key="frame" x="10" y="54" width="54" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dkM-IH-FIr">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="dB8-gu-tgo" firstAttribute="top" secondItem="NME-QQ-Qd5" secondAttribute="top" constant="10" id="8lr-gF-SYi"/>
-                            <constraint firstItem="dB8-gu-tgo" firstAttribute="leading" secondItem="NME-QQ-Qd5" secondAttribute="leading" constant="10" id="nn4-Pm-eKs"/>
+                            <constraint firstItem="dkM-IH-FIr" firstAttribute="top" secondItem="NME-QQ-Qd5" secondAttribute="top" id="Dwy-Ro-K6C"/>
+                            <constraint firstItem="NME-QQ-Qd5" firstAttribute="bottom" secondItem="dkM-IH-FIr" secondAttribute="bottom" id="bfP-3T-NyS"/>
+                            <constraint firstItem="dkM-IH-FIr" firstAttribute="leading" secondItem="NME-QQ-Qd5" secondAttribute="leading" id="dlP-5e-oMb"/>
+                            <constraint firstItem="NME-QQ-Qd5" firstAttribute="trailing" secondItem="dkM-IH-FIr" secondAttribute="trailing" id="g9R-Fd-p0P"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="NME-QQ-Qd5"/>
                     </view>
