--- a/Mp3App/Features/Search/Result/Track/TrackResultViewController.storyboard
+++ b/Mp3App/Features/Search/Result/Track/TrackResultViewController.storyboard
@@ -16,17 +16,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tracks" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IgE-Ah-daE">
-                                <rect key="frame" x="10" y="54" width="51" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jvh-MZ-cTj">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="IgE-Ah-daE" firstAttribute="top" secondItem="DOQ-Hd-msu" secondAttribute="top" constant="10" id="16M-Qv-0Kj"/>
-                            <constraint firstItem="IgE-Ah-daE" firstAttribute="leading" secondItem="DOQ-Hd-msu" secondAttribute="leading" constant="10" id="MbN-t9-Kga"/>
+                            <constraint firstItem="jvh-MZ-cTj" firstAttribute="top" secondItem="DOQ-Hd-msu" secondAttribute="top" id="4sZ-UN-WXi"/>
+                            <constraint firstItem="DOQ-Hd-msu" firstAttribute="bottom" secondItem="jvh-MZ-cTj" secondAttribute="bottom" id="QD1-IH-xD4"/>
+                            <constraint firstItem="DOQ-Hd-msu" firstAttribute="trailing" secondItem="jvh-MZ-cTj" secondAttribute="trailing" id="fdg-C1-Q0s"/>
+                            <constraint firstItem="jvh-MZ-cTj" firstAttribute="leading" secondItem="DOQ-Hd-msu" secondAttribute="leading" id="zbn-rB-qKv"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="DOQ-Hd-msu"/>
                     </view>
