--- a/Mp3App/Features/Search/SearchViewController.storyboard
+++ b/Mp3App/Features/Search/SearchViewController.storyboard
@@ -16,10 +16,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Prc-xW-Eot">
-                                <rect key="frame" x="0.0" y="104" width="414" height="758"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                            </view>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Tìm kiếm bài hát, ca sĩ, playlist" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="4O0-D5-2aj" customClass="CustomTextField" customModule="Mp3App" customModuleProvider="target">
                                 <rect key="frame" x="20" y="54" width="374" height="40"/>
                                 <color key="backgroundColor" red="0.9523469806" green="0.95248371359999995" blue="0.95231705899999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -36,12 +32,26 @@
                                     <constraint firstAttribute="height" constant="20" id="Jze-4d-gBq"/>
                                 </constraints>
                             </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="magnifyingglass" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ggH-Of-f89">
+                                <rect key="frame" x="80" y="379" width="254" height="148"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="BL0-u3-pdK"/>
+                                </constraints>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Prc-xW-Eot">
+                                <rect key="frame" x="0.0" y="104" width="414" height="758"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="ggH-Of-f89" firstAttribute="centerX" secondItem="Sc0-h5-sWg" secondAttribute="centerX" id="0u3-aU-Hrt"/>
                             <constraint firstItem="4O0-D5-2aj" firstAttribute="top" secondItem="Sc0-h5-sWg" secondAttribute="top" constant="10" id="4wG-eD-N2b"/>
+                            <constraint firstItem="ggH-Of-f89" firstAttribute="centerY" secondItem="Sc0-h5-sWg" secondAttribute="centerY" id="9Wf-Ps-ngy"/>
                             <constraint firstItem="Ugj-Hx-sKf" firstAttribute="leading" secondItem="Sc0-h5-sWg" secondAttribute="leading" constant="30" id="C9i-p5-AvL"/>
                             <constraint firstItem="Prc-xW-Eot" firstAttribute="leading" secondItem="Sc0-h5-sWg" secondAttribute="leading" id="Cd2-PP-MZW"/>
+                            <constraint firstItem="ggH-Of-f89" firstAttribute="leading" secondItem="Sc0-h5-sWg" secondAttribute="leading" constant="80" id="Nq7-q8-ke8"/>
                             <constraint firstItem="Sc0-h5-sWg" firstAttribute="trailing" secondItem="Prc-xW-Eot" secondAttribute="trailing" id="Ptu-kj-wpA"/>
                             <constraint firstItem="4O0-D5-2aj" firstAttribute="leading" secondItem="Sc0-h5-sWg" secondAttribute="leading" constant="20" id="UYt-ef-f9I"/>
                             <constraint firstItem="Sc0-h5-sWg" firstAttribute="bottom" secondItem="Prc-xW-Eot" secondAttribute="bottom" id="Ufn-vx-Jrb"/>
@@ -62,6 +72,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="magnifyingglass" catalog="system" width="64" height="56"/>
         <image name="search_Normal" width="16" height="16"/>
     </resources>
 </document>
