--- a/Mp3App/Features/Search/Result/Playlist/PlaylistResultViewController.storyboard
+++ b/Mp3App/Features/Search/Result/Playlist/PlaylistResultViewController.storyboard
@@ -20,17 +20,27 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rất tiếc không có kết quả phù hợp!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ePM-xw-CvD">
+                                <rect key="frame" x="30" y="443" width="354" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="ePM-xw-CvD" firstAttribute="centerX" secondItem="NME-QQ-Qd5" secondAttribute="centerX" id="9Ny-XP-ybp"/>
                             <constraint firstItem="dkM-IH-FIr" firstAttribute="top" secondItem="NME-QQ-Qd5" secondAttribute="top" id="Dwy-Ro-K6C"/>
                             <constraint firstItem="NME-QQ-Qd5" firstAttribute="bottom" secondItem="dkM-IH-FIr" secondAttribute="bottom" id="bfP-3T-NyS"/>
                             <constraint firstItem="dkM-IH-FIr" firstAttribute="leading" secondItem="NME-QQ-Qd5" secondAttribute="leading" id="dlP-5e-oMb"/>
                             <constraint firstItem="NME-QQ-Qd5" firstAttribute="trailing" secondItem="dkM-IH-FIr" secondAttribute="trailing" id="g9R-Fd-p0P"/>
+                            <constraint firstItem="ePM-xw-CvD" firstAttribute="centerY" secondItem="NME-QQ-Qd5" secondAttribute="centerY" id="obl-2V-NtA"/>
+                            <constraint firstItem="ePM-xw-CvD" firstAttribute="leading" secondItem="NME-QQ-Qd5" secondAttribute="leading" constant="30" id="tz5-Ct-qb7"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="NME-QQ-Qd5"/>
                     </view>
                     <connections>
+                        <outlet property="notificationLabel" destination="ePM-xw-CvD" id="09X-Ma-0Vs"/>
                         <outlet property="tableView" destination="dkM-IH-FIr" id="mq9-1T-ndl"/>
                     </connections>
                 </viewController>
