--- a/Mp3App/Features/Search/Result/Track/TrackResultViewController.storyboard
+++ b/Mp3App/Features/Search/Result/Track/TrackResultViewController.storyboard
@@ -20,17 +20,27 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rất tiếc không có kết quả phù hợp!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4mA-bM-VQp">
+                                <rect key="frame" x="30" y="443" width="354" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="jvh-MZ-cTj" firstAttribute="top" secondItem="DOQ-Hd-msu" secondAttribute="top" id="4sZ-UN-WXi"/>
                             <constraint firstItem="DOQ-Hd-msu" firstAttribute="bottom" secondItem="jvh-MZ-cTj" secondAttribute="bottom" id="QD1-IH-xD4"/>
+                            <constraint firstItem="4mA-bM-VQp" firstAttribute="centerY" secondItem="DOQ-Hd-msu" secondAttribute="centerY" id="Wn8-G4-d4Q"/>
+                            <constraint firstItem="4mA-bM-VQp" firstAttribute="leading" secondItem="DOQ-Hd-msu" secondAttribute="leading" constant="30" id="c76-bB-LLd"/>
                             <constraint firstItem="DOQ-Hd-msu" firstAttribute="trailing" secondItem="jvh-MZ-cTj" secondAttribute="trailing" id="fdg-C1-Q0s"/>
                             <constraint firstItem="jvh-MZ-cTj" firstAttribute="leading" secondItem="DOQ-Hd-msu" secondAttribute="leading" id="zbn-rB-qKv"/>
+                            <constraint firstItem="4mA-bM-VQp" firstAttribute="centerX" secondItem="DOQ-Hd-msu" secondAttribute="centerX" id="zqI-fZ-BSQ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="DOQ-Hd-msu"/>
                     </view>
                     <connections>
+                        <outlet property="notificationLabel" destination="4mA-bM-VQp" id="c5Z-iq-T5K"/>
                         <outlet property="tableView" destination="jvh-MZ-cTj" id="AEt-3M-VT5"/>
                     </connections>
                 </viewController>
