add feature remove playlist

--- a/Mp3App/Features/Home/HomeViewController.storyboard
+++ b/Mp3App/Features/Home/HomeViewController.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ueg-3L-TUa">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -16,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="c7I-tT-KIc">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
@@ -25,7 +26,7 @@
                         <constraints>
                             <constraint firstItem="c7I-tT-KIc" firstAttribute="leading" secondItem="eHs-xx-bzy" secondAttribute="leading" id="8kN-Ss-t6X"/>
                             <constraint firstAttribute="trailing" secondItem="c7I-tT-KIc" secondAttribute="trailing" id="A2r-AV-DaC"/>
-                            <constraint firstItem="c7I-tT-KIc" firstAttribute="top" secondItem="eHs-xx-bzy" secondAttribute="top" id="YM3-Z4-Ace"/>
+                            <constraint firstItem="c7I-tT-KIc" firstAttribute="top" secondItem="5dp-6l-anS" secondAttribute="top" id="COZ-sT-RbX"/>
                             <constraint firstAttribute="bottom" secondItem="c7I-tT-KIc" secondAttribute="bottom" id="pd6-w1-nY9"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="5dp-6l-anS"/>
@@ -36,7 +37,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="z97-YL-Aft" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="206" y="-200"/>
+            <point key="canvasLocation" x="205.79710144927537" y="-200.22321428571428"/>
         </scene>
     </scenes>
 </document>
