--- a/Mp3App/Features/Mypage/LibraryDetail/LibraryDetailTableViewCell.xib
+++ b/Mp3App/Features/Mypage/LibraryDetail/LibraryDetailTableViewCell.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -70,6 +71,7 @@
             <connections>
                 <outlet property="albumImageView" destination="AC6-qE-ymN" id="j1V-F3-oiJ"/>
                 <outlet property="descriptionLabel" destination="hRV-QH-54e" id="hTn-Do-4cE"/>
+                <outlet property="optionButton" destination="Scg-7x-ppd" id="5cM-kL-npT"/>
                 <outlet property="titleLabel" destination="FxM-NT-vGO" id="Vfd-JF-HCs"/>
             </connections>
             <point key="canvasLocation" x="107.97101449275362" y="170.08928571428569"/>
